# claude-code-watermark-check

./: .gitignore  ACCEPTANCE.md  COMMUNITY_REPLY.md  HANDOFF.md  IMPLEMENTATION.md  LICENSE  PRD.md  PROJECT_PROMPT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
fixtures/negative/: plain.js
fixtures/positive/: minified.js
src/ccwatermark/: __main__.py  cli.py  scanner.py  signatures.py
tests/: test_scanner.py
